@@ -124,8 +124,9 @@ void dog_data_mode(void);
 void dog_Delay(uint16_t val);				/* delay in milliseconds */
 void dog_Init(unsigned short pin_a0);
 void dog_set_contrast(uint8_t val);
-void dog_set_inverse(uint8_t val);
+void dog_SetInvertPixelMode(uint8_t val);	/* previosly named dog_set_inverse() */
 
+  
   
 /* --- page functions --- */
 
